remove gc logging (#8)