@@ -22,6 +22,6 @@ RUN rm -rf /usr/local/tomcat/webapps/*
 COPY --from=build /src/dhis-web/dhis-web-portal/target/dhis.war /usr/local/tomcat/webapps/ROOT.war
 COPY dhis.conf /opt/dhis2/dhis.conf
 
-ENV JAVA_OPTS="-Xms4g -Xmx4g -XX:+UseG1GC -XX:MaxGCPauseMillis=200 -XX:+UseStringDeduplication -Xss512k -XX:MetaspaceSize=128m -XX:MaxMetaspaceSize=256m -XX:MaxRAMPercentage=80.0 -Xloggc:/dev/stdout XX:+PrintGC -XX:+PrintGCDateStamps"
+ENV JAVA_OPTS="-Xms4g -Xmx4g -XX:+UseG1GC -XX:MaxGCPauseMillis=200 -XX:+UseStringDeduplication -Xss512k -XX:MetaspaceSize=128m -XX:MaxMetaspaceSize=256m -XX:MaxRAMPercentage=80.0"
 
 CMD ["catalina.sh", "run"]
